# auto-appscreenshots

./: .gitignore  README.md  pyproject.toml
auto_appscreenshots/: __init__.py  cli.py  cli_runner.py  config_docs.py  config_manager.py  file_manager.py  font_finder.py  generator.py  image_processor.py  models.py  preset_themes.py  style_merger.py  text_renderer.py  ui_reporter.py  validator.py
examples/: config.yml  generate_samples.py
tests/: __init__.py  conftest.py  test_config_manager.py  test_file_manager.py  test_generator.py  test_image_processor.py  test_integration.py  test_models.py  test_preset_themes.py  test_style_merger.py  test_text_renderer.py  test_validator.py  test_yaml_anchors.py
